# frumkin

./: .gitignore  Comparison.ipynb  README.md  alkaline-her-kinetics.ipynb  alkaline-her-kinetics_old.ipynb  analyze_goyalkoper.ipynb  analyze_monteiro.ipynb  analyze_monteiro_pt.ipynb  ariba.ipynb  bjerrum.ipynb  boundary_conditions.py  cation_trend_plots.ipynb  complete_edl.py  concentrations.ipynb  constants.py  current_plots.ipynb  current_plots.py  data-analysis.ipynb  data-insulator.ipynb  edl.py  f_sioh_plots.ipynb  f_sioh_plots.py  fbv.ipynb  figure_10_au_scatter.py  figure_4_phi.py  figure_5_concentrations.py  figure_6_au.py  figure_8_pt.py  figure_s3_pt_scatter.py  figure_s4_au_ringe.py  generate_pickle_au.py  generate_pickle_pt.py  insulator.ipynb  kinetics.py  langevin.py  lucas.mplstyle  models.py  nanostructure_paper_plots.ipynb  nondim-calculation.nb  odes.py  (+73 more)
comsol_data/: 70nm_gold_electrode_charge.txt  70nm_nano_electrode_charge.txt  70nm_nano_electrode_charge_neg.txt  70nm_nano_electrode_charge_pos.txt
data/: K.csv  K_ph_11_full.csv  K_ph_13_full.csv  Li.csv  Li_ph_11_full.csv  Li_ph_13_full.csv  Na.csv  Na_ph_11_full.csv  Na_ph_13_full.csv  all_df.csv  all_df_ringe.csv  au_df.csv  au_df_ringe.csv  au_k.parquet  au_li.parquet  pt_df.csv  pt_k.parquet  pt_li.parquet
edl/: constants.py  defaults.py  electrolyte.py  gongadze_iglic.py  models.py  species.py  tools.py
examples/: concentrations.ipynb  fbv.ipynb  gouychapman.ipynb  minimal.ipynb
frumkin/: boundary.py  boundary_conditions.py  electrolyte.py  gongadze_iglic.py  results.py  stern.py
(+25 files in other folders)
