[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "frumkin"
version = "0.1.1"
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
]
authors = [
  {name="Lucas B.T. de Kam", email="lucas.de.kam@tum.de" },
]

[tool.setuptools.packages.find]
where = ["."] 
